# fantik

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  importlinter.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docker/: app.Dockerfile
docker/alertmanager/: alertmanager.yml  alertmanager.yml.example
docker/grafana/dashboards/: bot_health.json  broadcast.json  domain.json  tg_api.json  workers.json
docker/prometheus/: alerts.yml  prometheus.yml
docs/: 00-overview.md  01-architecture.md  02-stack-and-rationale.md  03-data-model.md  04-modules.md  05-user-flows.md  06-admin-and-moderation.md  07-broadcast-system.md  08-search-design.md  09-reader-pagination.md  10-tracking-analytics.md  11-scalability-performance.md  12-security-privacy.md  13-deployment-docker.md  14-observability.md  15-testing.md  16-roadmap.md  README.md
docs/diagrams/: README.md  architecture.md  erd.md  sequences.md
docs/manual/: stage-3.md  stages-0-3.md
docs/ops/: backup.md  production.md  runbook.md
migrations/: env.py
migrations/versions/: 0001_init.py  0002_fanfics.py  0003_moderation_audit.py  0004_more_fandoms.py  0005_reading.py  0006_social.py  0007_chapter_first_approved.py  0008_broadcasts_and_views.py  0009_user_bot_block.py  0010_fandoms_taxonomy_expand.py  0011_fandom_proposals.py  0012_backfill_first_events.py
scripts/: backup_pg.sh  restore_drill.sh  smoke.sh
src/app/: __init__.py
src/app/core/: clock.py  config.py  errors.py  logging.py  metrics.py  sentry.py
tests/: conftest.py
tests/integration/: test_approve_writes_outbox.py  test_chapter_pages_save_bulk.py  test_db_smoke.py  test_fandom_proposals_repo.py  test_moderation_reasons_seed.py  test_outbox_fanout_routing.py  test_pick_next_skip_locked.py  test_search_fandoms_repo.py  test_social_migration_smoke.py
tests/integration/broadcasts/: test_deliver_flow.py  test_migration_smoke.py
tests/integration/search/: conftest.py  test_archive_removes_from_index.py  test_facets.py  test_fallback_on_meili_down.py  test_meili_roundtrip.py  test_outbox_to_index_pipeline.py
tests/load/: README.md  conftest.py  fake_tg_server.py  load_broadcast.py  load_reading.py  load_start.py
tests/unit/: test_config.py  test_entity_utils.py  test_register_user_usecase.py  test_search_circuit_breaker.py  test_start_payload_parser.py
tests/unit/application/: _fakes.py  _reading_fakes.py  test_add_chapter_uc.py  test_approve_reject_uc.py  test_cancel_submission_uc.py  test_create_draft_uc.py  test_first_event_wiring.py  test_index_fanfic_uc.py  test_pick_next_uc.py  test_reading_use_cases.py  test_release_stale_locks_uc.py  test_revise_and_delete_uc.py  test_search_filter_builder.py  test_search_uc_fallback.py  test_social_use_cases.py  test_submit_for_review_uc.py  test_update_chapter_uc.py  test_update_fanfic_uc.py
tests/unit/core/: test_metrics_registry.py  test_sentry_scrub.py
tests/unit/domain/: test_tracking_code.py
tests/unit/infrastructure/: test_charts.py  test_segment_to_sql.py
tests/unit/presentation/: _flow_helpers.py  test_admin_export_kbs.py  test_admin_fandom_proposals_kb.py  test_admin_fandoms_kb.py  test_admin_menu_layout.py  test_author_create_flow.py  test_author_manage_flow.py  test_browse_fandom_picker.py  test_browse_root_kb.py  test_display.py  test_fandom_picker_kb.py  test_filter_labels.py  test_main_menu_layout.py  test_mod_menu_layout.py  test_picker_exit_buttons.py  test_quick_in_fandom_header.py  test_quick_search_back_target.py  test_search_filter_flow.py  test_search_filters_root_kb.py  test_search_query_flow.py  test_state_escape.py  (+1 more)
(+311 files in other folders)
