[project]
name = "fantik"
version = "0.1.0"
description = "Telegram bot for creating and reading fanfiction"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Fantik team" }]

dependencies = [
    # Telegram
    "aiogram>=3.27,<4",
    # DI
    "dishka>=1.4",
    # Config
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    # Database
    "sqlalchemy[asyncio]>=2.0.32,<3",
    "asyncpg>=0.30",
    "alembic>=1.13",
    # Cache + FSM + broker
    "redis>=5.0",
    # Search
    "meilisearch-python-sdk>=3.0",
    # Background tasks
    "taskiq>=0.11",
    "taskiq-redis>=1.0",
    "taskiq-aiogram>=0.3.1,<0.4",
    # Observability
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "sentry-sdk[asyncio]>=2.10",
    # HTTP (webhook + health)
    "aiohttp>=3.10",
    # Misc
    "orjson>=3.10",
    "msgpack>=1.0",
    "python-dateutil>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "hypothesis>=6.110",
    "testcontainers[postgres,redis]>=4.8",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "import-linter>=2.0",
    "pre-commit>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

# --------- ruff ---------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # bugbear
    "S",             # security (bandit)
    "A",             # builtins
    "C4",            # comprehensions
    "DTZ",           # tz-aware datetime
    "T20",           # print
    "RET",           # return
    "SIM",           # simplify
    "TCH",           # type-checking imports
    "PTH",           # pathlib
    "ERA",           # eradicate
    "PL",            # pylint subset
    "RUF",           # ruff-specific
]
ignore = [
    "E501",      # handled by formatter
    "S101",      # allow asserts in tests
    "PLR0913",   # too many arguments (acceptable in use cases / constructors)
    "PLR2004",   # magic values in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR", "N"]
"migrations/versions/*" = ["D", "E", "N", "UP", "W", "ERA"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --------- mypy ---------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_unreachable = true
pretty = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "testcontainers.*",
    "respx.*",
    "meilisearch_python_sdk.*",
    "msgpack",
    "msgpack.*",
]
ignore_missing_imports = true

# --------- pytest ---------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests requiring testcontainers",
    "e2e: end-to-end tests through bot dispatcher",
    "slow: slow tests (property-based, load-ish)",
]

# --------- coverage ---------
[tool.coverage.run]
branch = true
source = ["src/app"]
omit = ["*/migrations/*", "*/__main__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
